Set up Spark v3.5.7